prusti/tests/parse/ui/simple_imply.stderr
error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:3:15
  |
3 | #[requires="  12345 ==> true"]
  |               ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:6:30
  |
6 | #[requires="  true      ==>  12345 "]
  |                              ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
 --> $DIR/simple_imply.rs:9:35
  |
9 | #[requires="  true  ==>  (true && 12345 && true)"]
  |                                   ^^^^^ expected bool, found integral variable
  |
  = note: expected type `bool`
             found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:12:35
   |
12 | #[requires="  true  ==>  (true && 12345 ==> true)"]
   |                                   ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:15:35
   |
15 | #[requires="  true  ==>  (true && 12345 ==> true && 12345)"]
   |                                   ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/simple_imply.rs:15:53
   |
15 | #[requires="  true  ==>  (true && 12345 ==> true && 12345)"]
   |                                                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
